# provider-eligibility

./: .gitignore  .vercel-deploy-trigger  README.md  create_fastapi_project.py  package-lock.json  package.json  test.csv
.github/workflows/: ci.yml  db-monitoring.yml
.next/server/: server-reference-manifest.json
.vercel/: project.json
backend/: .env.example  database_backup.json  migrate_to_postgres.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  reset_db.py  sql_app.db  update_requirements.py  vercel.json  vercel_app.py  verify_data.py  verify_tables.py
backend/.github/workflows/: db-monitoring.yml
backend/alembic/: env.py
backend/alembic/versions/: c3cf8131ce0f_create_eligibility_rules_tables.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: eligibility.py
backend/app/core/: config.py  database.py
backend/app/db/: base.py  base_class.py  init_db.py
backend/app/models/: base.py  eligibility_rules.py  provider.py
backend/app/routes/: __init__.py  api.py  provider.py
backend/app/routes/endpoints/: provider_trust.py
backend/app/schemas/: eligibility.py  eligibility_rules.py
backend/app/services/: eligibility_service.py  provider_trust.py
backend/tests/: conftest.py  test_db.py  test_eligibility_endpoints.py  test_provider_trust.py
docs/: CLERK_AUTHENTICATION_STEPS.md  CLERK_DASHBOARD_VERIFICATION.md  CLERK_DEV_BROWSER_FIX.md  CLERK_TROUBLESHOOTING.md  admin-ui.md  api-doc.md  cred-req-doc.md  eligibility-ui.md  prd.md  prfaq.md  technical-doc.md
frontend/: .env.example  .prettierignore  jest.config.js  jest.setup.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/src/app/: layout.tsx  metadata.ts  page.tsx
frontend/src/components/: AddRuleForm.tsx  EditRuleDialog.tsx  Integrations.tsx  NPISearch.tsx  RequirementDetail.tsx  RequirementList.tsx  RuleList.tsx  SearchForm.tsx  ViewToggle.tsx  navigation.tsx  theme-provider.tsx
frontend/src/config/: api.ts  providerRules.ts
frontend/src/services/: eligibilityApi.ts  eligibilityRules.ts
frontend/src/types/: defaultProviderTypes.ts  eligibility.ts  providerTypes.ts
frontend/src/utils/: eligibilityProcessor.ts  testUtils.ts  (+3 more)
frontend/types/: providerTypes.ts
scripts/: db_backup.py  db_health_check.py
src/components/: EditRuleDialog.tsx
src/services/: eligibilityRules.ts
src/types/: providerTypes.ts
(+23 files in other folders)
